--- a/app/templates/create_employee.html
+++ b/app/templates/create_employee.html
@@ -54,5 +54,6 @@
             {{ form.submit(class="btn btn-outline-info") }}
         </div>
     </form>
+    <a href="{{ url_for('employees.list_employees') }}" class="btn btn-secondary mt-3">Back to Employee List</a>
 </div>
 {% endblock content %}
