--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -9,11 +9,11 @@
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Employee Management</a>
+        <a class="navbar-brand" href="{{ url_for('main.home') }}">Employee Management</a>
         <div class="collapse navbar-collapse">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="{{ url_for('main.index') }}">Home</a>
+                    <a class="nav-link" href="{{ url_for('main.home') }}">Home</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="{{ url_for('employees.list_employees') }}">Employees</a>
